fix: decrease title and desc gap

--- a/src/section-style/shared.module.scss
+++ b/src/section-style/shared.module.scss
@@ -93,7 +93,7 @@
   padding: 0px 144px 32px 144px;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 24px;
   align-self: stretch;
 
   .title {
